Move simplification of histogram responses to exo.py. Fixed word wrapping on very small screens.

--- a/Exoplanets/Exoplanets/static/content/site.css
+++ b/Exoplanets/Exoplanets/static/content/site.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     background-color: #363377;
+    word-wrap: break-word;
 }
 
 .card {
